--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -17,10 +17,11 @@ jobs:
     - uses: ammaraskar/sphinx-action@0.4
       with:
         docs-folder: "docs/"
-        pre-build-command: "apt install --yes git build-essential pandoc"
+        pre-build-command: "apt install --yes git build-essential pandoc; pip install --yes tox"
         # # build-command: "make html"
         # build-command: "sphinx-build -D plot_formats='svg,pdf,hires.png' -b html . _build"
-        build-command: "sphinx-build -M html . _build -D plot_formats='svg,pdf,hires.png'"
+        #build-command: "sphinx-build -M html . _build -D plot_formats='svg,pdf,hires.png'"
+        build-command: "tox -e build_docs"
     # Publish built docs to gh-pages branch.
     # ===============================
     - name: Commit documentation changes
