--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -11,22 +11,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v4
     # Example of using a custom build-command.
     # - uses: ammaraskar/sphinx-action@master
     - uses: ammaraskar/sphinx-action@0.4
       with:
         docs-folder: "docs/"
-        pre-build-command: "apt install --yes git build-essential pandoc && pip install --yes tox"
+        pre-build-command: "apt install --yes git build-essential pandoc"
         # # build-command: "make html"
         # build-command: "sphinx-build -D plot_formats='svg,pdf,hires.png' -b html . _build"
         #build-command: "sphinx-build -M html . _build -D plot_formats='svg,pdf,hires.png'"
-        build-command: "tox -e build_docs"
+        build-command: "sphinx-build -b html . _build"
     # Publish built docs to gh-pages branch.
     # ===============================
     - name: Commit documentation changes
       run: |
-        git clone https://github.com/sedonaprice/regions.git --branch gh-pages --single-branch gh-pages
+        git clone https://github.com/sedonaprice/regions-docs-tmp.git --branch gh-pages --single-branch gh-pages
         cp -r docs/_build/html/* gh-pages/
         cd gh-pages
         touch .nojekyll
