--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -21,7 +21,7 @@ jobs:
         # # build-command: "make html"
         # build-command: "sphinx-build -D plot_formats='svg,pdf,hires.png' -b html . _build"
         #build-command: "sphinx-build -M html . _build -D plot_formats='svg,pdf,hires.png'"
-        build-command: "sphinx-build -b html . _build -w sphinx-log"
+        build-command: "sphinx-build -b html . _build"
     # Publish built docs to gh-pages branch.
     # ===============================
     - name: Commit documentation changes
