--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -1,45 +1,27 @@
 name: Build Docs
 
-on:
-  push:
-    branches:
-      - main
+on: [push, pull_request, workflow_dispatch]
+
+permissions:
+  contents: write
 
 jobs:
-  build:
-
+  docs:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v1
-    # Example of using a custom build-command.
-    # - uses: ammaraskar/sphinx-action@master
-    - uses: ammaraskar/sphinx-action@0.4
-      with:
-        docs-folder: "docs/"
-        pre-build-command: "apt install --yes git build-essential pandoc"
-        # # build-command: "make html"
-        # build-command: "sphinx-build -D plot_formats='svg,pdf,hires.png' -b html . _build"
-        #build-command: "sphinx-build -M html . _build -D plot_formats='svg,pdf,hires.png'"
-        build-command: "sphinx-build -W -b html . _build/html"
-    # Publish built docs to gh-pages branch.
-    # ===============================
-    - name: Commit documentation changes
-      run: |
-        git clone https://github.com/sedonaprice/regions-docs-tmp.git --branch gh-pages --single-branch gh-pages
-        cp -r docs/_build/html/* gh-pages/
-        cd gh-pages
-        touch .nojekyll
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add .
-        git commit -m "Update documentation" -a || true
-        # The above command will fail if no changes were present, so we ignore
-        # that.
-    - name: Push changes
-      uses: ad-m/github-push-action@v0.6.0
-      with:
-        branch: gh-pages
-        directory: gh-pages
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-    # ===============================
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+      - name: Install dependencies
+        run: |
+          pip install sphinx>=4.1.2 sphinx_rtd_theme astropy matplotlib numpy shapely sphinx-astropy>=1.9 jinja2<3.1
+      - name: Sphinx build
+        run: |
+          sphinx-build -W -b html . _build/html
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+        with:
+          publish_branch: gh-pages
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: _build/
+          force_orphan: true
