--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -16,7 +16,7 @@ jobs:
           python-version: '3.13'
       - name: Install dependencies
         run: |
-          pip install sphinx>=4.1.2 sphinx_rtd_theme myst_parser astropy matplotlib numpy shapely sphinx-astropy>=1.9 jinja2<3.1
+          pip install sphinx sphinx_rtd_theme myst_parser astropy matplotlib numpy shapely sphinx-astropy
       - name: Sphinx build
         run: |
           sphinx-build -W -b html . _build/html
