--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -19,7 +19,7 @@ jobs:
           pip install sphinx sphinx_rtd_theme myst_parser astropy matplotlib numpy shapely sphinx-astropy
       - name: Sphinx build
         run: |
-          sphinx-build -W -b html . _build/html
+          sphinx-build -W -b html docs docs/_build/html
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
